Corrigindo BUGS e atualizando README

--- a/frontend/src/app/index.html
+++ b/frontend/src/app/index.html
@@ -40,6 +40,6 @@
         </div>
     </div>
 
-    <script src="../assets/scripts/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
